--- a/terry.html
+++ b/terry.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>title</title>
+  <title>TerryBot</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" type="image/x-icon" href="images/Terry.png">
 </head>
 
 <body>
