--- a/help.html
+++ b/help.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="images/Terry.png">
 </head>
 
-<body>
+<body id = "mainbg" onload = "checksaved()">
   <br>
   
 
@@ -23,6 +23,7 @@
     <h2>/gh: Open TerryBot github</h2>
     <h2>/gs (query): Google Search the query.</h2>
     <h2>/ops (site): Open the site quickly</h2>
+    <h2>/bgc (filename): Open a file to set as the background. NOTE: Image must be named exactly (without any folders, just the name) and put in the Images folder.</h2>
     <h2>/status: Check TerryBot's status</h2>
     <h1>Terry Functions</h1>
     <h2>Google search</h2>
